--- a/dd_vis.html
+++ b/dd_vis.html
@@ -50,6 +50,7 @@
         $("#opt_floworder").hide();
         $("#opt_xaxis").hide();
         $("#opt_yaxis").hide();
+        $("#opt_zaxis").hide();
         $("#opt_node_cp").show();
         $("#opt_link_cp").show();
         $("#opt_highlight").show();
@@ -64,6 +65,7 @@
         $("#opt_floworder").hide();
         $("#opt_xaxis").show();
         $("#opt_yaxis").show();
+        $("#opt_zaxis").show();
         $("#opt_node_cp").show();
         $("#opt_link_cp").hide();
         $("#opt_highlight").show();
@@ -78,6 +80,7 @@
         $("#opt_floworder").hide();
         $("#opt_xaxis").show();
         $("#opt_yaxis").show();
+        $("#opt_zaxis").hide();
         $("#opt_node_cp").show();
         $("#opt_link_cp").show();
         $("#opt_highlight").show();
@@ -92,6 +95,7 @@
         $("#opt_floworder").hide();
         $("#opt_xaxis").hide();
         $("#opt_yaxis").hide();
+        $("#opt_zaxis").hide();
         $("#opt_node_cp").show();
         $("#opt_link_cp").show();
         $("#opt_highlight").show();
@@ -106,6 +110,7 @@
         $("#opt_floworder").hide();
         $("#opt_xaxis").hide();
         $("#opt_yaxis").hide();
+        $("#opt_zaxis").hide();
         $("#opt_node_cp").show();
         $("#opt_link_cp").show();
         $("#opt_highlight").show();
@@ -120,6 +125,7 @@
         $("#opt_floworder").show();
         $("#opt_xaxis").hide();
         $("#opt_yaxis").hide();
+        $("#opt_zaxis").hide();
         $("#opt_node_cp").show();
         $("#opt_link_cp").show();
         $("#opt_highlight").show();
@@ -134,6 +140,7 @@
         $("#opt_floworder").hide();
         $("#opt_xaxis").hide();
         $("#opt_yaxis").hide();
+        $("#opt_zaxis").hide();
         $("#opt_node_cp").show();
         $("#opt_link_cp").show();
         $("#opt_highlight").show();
@@ -148,6 +155,7 @@
         $("#opt_floworder").hide();
         $("#opt_xaxis").hide();
         $("#opt_yaxis").hide();
+        $("#opt_zaxis").hide();
         $("#opt_node_cp").show();
         $("#opt_link_cp").show();
         $("#opt_highlight").show();
@@ -242,6 +250,11 @@
 
     function onYOChanged(r){
         config.yorder=bjs.xyorder[r.value];
+        redraw();
+    }
+
+    function onZOChanged(r){
+        config.zorder=bjs.xyorder[r.value];
         redraw();
     }
 
@@ -790,6 +803,23 @@
                                 <option value="term">Business Term</option>
                                 <option value="complexity">Complexity</option>
                                 <option value="type">Asset Type</option>
+                                <option value="owner">Asset Owner</option>
+                                <option value="dept">Asset Department</option>
+                            </select></td>
+                         </tr>  
+                         <tr id="opt_zaxis">
+                            <td class="formlabel">Z Axis:</td>
+                            <td><select class="easyui-combobox" style="width:140px" id="ctrl_yo" name="ctrl_yo" data-options="onSelect: onZOChanged">
+                                <option value="asset">Asset Type</option>   
+                                <option value="shallowness">Output Order</option>
+                                <option value="depth">Source Order</option>
+                                <option value="timing">Timing</option>
+                                <option value="quality">Quality/Error Factor</option>
+                                <option value="risk">Risk Level</option>
+                                <option value="importance">Importance</option>
+                                <option value="term">Business Term</option>
+                                <option value="complexity">Complexity</option>
+                                <option value="type">Asset Name</option>
                                 <option value="owner">Asset Owner</option>
                                 <option value="dept">Asset Department</option>
                             </select></td>
