--- a/dd_vis.html
+++ b/dd_vis.html
@@ -435,7 +435,7 @@
 
                     stats += "<h3>Importance:</h3><ul><li>Total Importance: " + d.field.effimportance + " </li>";
                     if(d.field.importance > 0){
-                        stats += "<li>Inherent importance: " + d.field.effimportance + "</li>";
+                        stats += "<li>Inherent importance: " + d.field.importance + "</li>";
                     }
                     for(var i=0;i<d.field.targets.length;++i){
                         if(d.field.targets[i].effimportance > 0){
