removed large test data, changed title

--- a/dd_vis.html
+++ b/dd_vis.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Lucid Lineage</title>
+	<title>Clarity Metadata</title>
 
 
 	<link rel="stylesheet" type="text/css" href="lib/jeasy/themes/herald/easyui.css">
